# RayTracer2

./: 01_simple  02_superposition  03_transparence  04_Profondeur_etendue  05_tirangle_sans_plan  06_triangle_plan_lumire_ponctuelle  07_melange  08_melange2  09_sphere_plan_rotation  10_triangle_plan_rotation  11_melange1_rotation  12_melange2_rotation  CMakeLists.txt  Doxyfile.in  README.md
RayTracer/: CMakeLists.txt
RayTracer/scenes/: test.xml
RayTracer/src/: CMakeLists.txt  RayTracer.cpp
RayTracer/src/light/: Ambiant.cpp  Ambiant.hpp  CMakeLists.txt  Directional.cpp  Directional.hpp  Light.cpp  Light.hpp  Point.cpp  Point.hpp
RayTracer/src/object/: Box.cpp  Box.hpp  CMakeLists.txt  Cone.cpp  Cone.hpp  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Object.cpp  Object.hpp  Parallelogram.cpp  Parallelogram.hpp  Plan.cpp  Plan.hpp  Sphere.cpp  Sphere.hpp  Tore.cpp  Tore.hpp  Triangle.cpp  Triangle.hpp
RayTracer/src/parser/: CMakeLists.txt  SceneParser.cpp  SceneParser.hpp  lecteurCar.cc  lecteurCar.h  lecteurScene.cc  lecteurScene.h  lecteurScene.h~  lecteurSym.cc  lecteurSym.h
RayTracer/src/perlin/: CMakeLists.txt  PerlinNoise.cpp  PerlinNoise.hpp
RayTracer/src/scene/: Camera.cpp  (+8 more)
rapport/: rapport.aux  rapport.tex
scenes/: melange.xml  melange_rotation.xml  multi_sphere_superposition.xml  sphere_plan_simple.xml  sphere_plan_transparence1.xml  sphere_plan_transparence_rotation.xml  test.xml  test_rotation.xml  triangle_plan.xml  triangle_plan_rotation_plan.xml  triangle_simple.xml
src/: CMakeLists.txt  RayTracer.cpp  RayTracer.hpp  main.cpp
src/cameras/: CMakeLists.txt  Camera.cpp  Camera.hpp
src/display/: CMakeLists.txt  Image.cpp  Image.hpp
src/engine/: CMakeLists.txt  Ray.cpp  Ray.hpp
src/engine/objects/: Shape.hpp
src/engine/objects/basic/: Plan.cpp  Plan.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/engine/sampling/: Sample.cpp  Sample.hpp
src/light/: Ambiant.cpp  Ambiant.hpp  Directional.cpp  Directional.hpp  Point.cpp  Point.hpp
src/lights/: Ambiant.cpp  Ambiant.hpp  CMakeLists.txt  Directional.hpp  Light.cpp  Light.hpp
src/mesh/: Mesh.hpp  Vertex.hpp
src/object/: Object.cpp  Plan.cpp  Sphere.cpp  Sphere.hpp
src/objects/: Shape.hpp
src/objects/basic/: Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/parser/: CMakeLists.txt  SceneParser.cpp  SceneParser.hpp
src/parser/xml/: CMakeLists.txt
src/random/: CMakeLists.txt  Random.cpp  Random.hpp
src/sampler/: CMakeLists.txt  Hammersley.cpp  Hammersley.hpp  Jitter.cpp  Jitter.hpp  Jittered.cpp  Jittered.hpp  MultiJittered.cpp  MultiJittered.hpp  NRooks.cpp  NRooks.hpp  Regular.hpp  Sampler.cpp  Sampler.hpp
src/scene/: Scene.hpp  Tracer.cpp  Tracer.hpp
src/texture/: CMakeLists.txt  Mapper.hpp
src/tools/: CMakeLists.txt  Color.cpp  Color.hpp  Color.hxx  ONB.cpp  ONB.hpp  Polynomial.hpp  Ray.cpp  Ray.hpp  Transformer.hpp  Vector.cpp  Vector.hpp  Vector.hxx
test/simple/: 001_1_sphere_2_triangles.xml
(+12 files in other folders)
